--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bootstrap": "^5.2.10",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chart.js": "^4.4.3",
     "css-loader": "^7.1.2",
     "htmx.org": "^1.9.12",
     "style-loader": "^4.0.0",
